tests/snapshots/insert_operations_test__A_empty_line.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:4
Lines: 1

Buffer:
text[ ]
