tests/snapshots/insert_operations_test__A_from_middle.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:11
Lines: 1

Buffer:
hello world[!]
