tests/snapshots/insert_operations_test__A_then_enter.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:5
Lines: 2

Buffer:
line 1
line [2]
