tests/snapshots/insert_operations_test__I_whitespace_only_line.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:3
Lines: 2

Buffer:
tex[t]
