tests/snapshots/insert_operations_test__I_with_indentation.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:6
Lines: 1

Buffer:
prefix[ ]    indented line
