tests/snapshots/insert_operations_test__O_basic.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:7
Lines: 3

Buffer:
line 1
new lin[e]
line 2
