tests/snapshots/insert_operations_test__O_empty_file.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:9
Lines: 3

Buffer:

first lin[e]
