tests/snapshots/insert_operations_test__O_first_line.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:8
Lines: 3

Buffer:
new firs[t]
first line
second line
