tests/snapshots/insert_operations_test__O_single_line.snap
---
source: tests/insert_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:8
Lines: 2

Buffer:
new firs[t]
only line
